--- a/config.yaml
+++ b/config.yaml
@@ -1,47 +1,39 @@
 baseurl: /
-title: Jiewen and His Markdown Docs
+title: JackMD
 author: Jiewen Tsai
 canonifyurls: yes
 languagecode: en
-theme: hugo-tanka
+paginate: 3
+theme: hugo-nanx2020
 enableEmoji: yes
 hasCJKLanguage: yes
-pygmentsstyle: vs
-pygmentscodefences: yes
 ignoreFiles:
   - \.Rmd$
   - \.Rmarkdown$
+  - _files$
   - _cache$
-  - \.knit\.md$
-  - \.utf8\.md$
+
 params:
-  faviconfile: images/favicon.png
+  copyright: © 2021 Jiewen Tsai
+  copyrightUrl: /
+  email: example@example.com
+  faviconfile: image/favicon.png
+  github: tsai-jiewen
   highlightjs: yes
-  highlightjslanguages:
-    - r
-    - python
-    - stan
+  logofile: image/avatar.png
+  pagetitle: Jiewen Tsai
+  posts_navigation: yes
   progressively: no
-  sitename: Jiewen and His Markdown Docs
+  # linkedin: nanxstats
+  # twitter: nanxstats
   uselatex: yes
-markup:
-  goldmark:
-    renderer:
-      unsafe: yes
 menu:
   primary:
-    - name: Home
-      url: /
-      weight: 1
-    - name: About
+    - identifier: about
+      name: About
       url: /about/
+      weight: 1
+    - identifier: blog
+      name: Blog
+      url: /blog/
       weight: 2
-    - name: GitHub
-      url: https://github.com/nanxstats
-      weight: 3
-    - name: Twitter
-      url: https://twitter.com/nanxstats
-      weight: 4
-    - name: Subscribe
-      url: /index.xml
-      weight: 5
