--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,9 @@ ignoreFiles:
   - _files$
   - _cache$
 
+GA: 
+disqus: https-jackmd-netlify-app
+
 params:
   copyright: © 2021 Jiewen Tsai
   copyrightUrl: /
