--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ ignoreFiles:
   - _cache$
 
 GA: 
-disqusShortname: https-jackmd-netlify-app
+disqus: https-jackmd-netlify-app
 
 params:
   copyright: © 2021 Jiewen Tsai
