--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ disqusShortname = "https-jackmd-netlify-app"
 copyright = "© 2021 Jiewen Tsai"
 copyrightUrl = "/"
 email = "example@example.com"
-faviconfile = "image/favicon.png"
+faviconfile = "image/favicon.ico"
 github = "tsai-jiewen"
 highlightjs = "yes"
 logofile = "image/avatar.png"
