--- a/themes/hugo-nanx2020/exampleSite/config.toml
+++ b/themes/hugo-nanx2020/exampleSite/config.toml
@@ -18,7 +18,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 pagetitle = "Jane Doe"
 copyright = "© 2018 Jane Doe"
 copyrightUrl = "https://nanx.me/hugo-renga/"
-faviconfile = "image/favicon.png"
+faviconfile = "image/favicon.ico"
 logofile = "image/avatar.png"
 posts_navigation = true
 uselatex = true
