--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ author = "Jiewen Tsai"
 canonifyurls = "yes"
 languagecode = "en"
 paginate = 3
-theme = "hugo-renga"
+theme = "hugo-lithium"
 enableEmoji = "yes"
 hasCJKLanguage = "yes"
 ignoreFiles = [ "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$" ]
