--- a/config.toml
+++ b/config.toml
@@ -34,10 +34,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "image/favicon.ico"
+    favicon = "favicon.ico"
 
     [params.logo]
-    url = "image/avatar.png"
+    url = "favicon.ico"
     width = 50
     height = 50
     alt = "Logo"
