--- a/config.toml
+++ b/config.toml
@@ -17,9 +17,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 [[menu.main]]
     name = "GitHub"
     url = "https://github.com/rstudio/blogdown"
-[[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+
 
 [params]
     description = "A website built through Hugo and blogdown."
@@ -37,7 +35,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     favicon = "favicon.ico"
 
     [params.logo]
-    url = "favicon.ico"
+    url = "logo.png"
     width = 50
     height = 50
     alt = "Logo"
