--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 title = "JackMD"
-theme = "hugo-lithium"
+theme = "hugo-xmin"
 enableEmoji = "yes"
 hasCJKLanguage = "yes"
 googleAnalytics = ""
@@ -21,7 +21,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 
 [params]
     description = "A website built through Hugo and blogdown."
-
+    copyright = "© 2021 Jiewen Tsai"
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
     highlightjsCDN = "//cdnjs.cloudflare.com/ajax/libs"
