--- a/config.toml
+++ b/config.toml
@@ -21,16 +21,15 @@ footnotereturnlinkcontents = "↩"
 note = "/note/:year/:month/:day/:slug/"
 post = "/post/:year/:month/:day/:slug/"
 
+[[menu.main]]
+name = "Home"
+url = ""
+weight = 1
 
 [[menu.main]]
 name = "About"
 url = "about/"
 weight = 2
-
-[[menu.main]]
-name = "Tags"
-url = "tags/"
-weight = 4
 
 
 [params]
