--- a/config.yaml
+++ b/config.yaml
@@ -72,8 +72,7 @@ params:
   footer: >
     &copy; [Jiewen Tsai](/) 2021
   license: >
-    Text and figures are licensed under [Creative Commons Attribution CC BY
-    4.0](https://creativecommons.org/licenses/by/4.0/). 
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
 
 markup:
   highlight:
