--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ googleAnalytics: ""
 disqusShortname: "https-jackmd-netlify-app"
 ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 footnotereturnlinkcontents: "↩"
-paginate: 2
+paginate: 6
 
 enableEmoji: true
 hasCJKLanguage: true
@@ -33,6 +33,8 @@ menu:
     - name: Search
       url: "#"
       identifier: menu-search
+    - name: Posts
+      url: '/post'
   footer:
 #    - name: Contact
 #      url: "/404.html"
@@ -62,8 +64,8 @@ menu:
 params:
   homePosts: 4
   mainSections: 
-   - post
-   - work
+#   - post
+#   - work
 #  editLink: "https://github.com/yihui/hugo-prose/edit/master/exampleSite/content/"
   authorDelimiter: " / "
   pageFeatures: [+sidenotes]
