--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,8 @@ highlightjsLang:
   - tex
   - python
 highlightjsTheme: github
+favicon: favicon.ico
+
 
 permalinks:
   post: "/post/:year/:month/:day/:slug/"
