--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ defaultContentLanguage: "en"
 # defaultContentLanguage: "zh"
 title: "⌾ JackMD"
 theme: "hugo-prose"
-googleAnalytics: ""
+googleAnalytics: "UA-183991274-1"
 disqusShortname: "https-jackmd-netlify-app"
 ignoreFiles: ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 footnotereturnlinkcontents: "↩"
