--- a/config.yaml
+++ b/config.yaml
@@ -19,10 +19,17 @@ menu:
   main:
     - name: About
       url: /about/
-    - name: GitHub
-      url: https://github.com/tsai-jiewen
-    - name: 
-      url: 
+      weight: 1
+#    - name: GitHub
+#      url: https://github.com/tsai-jiewen
+    - name: Series
+      url: /categories/
+      weight: 3
+    - name: Tags
+      url: /tags/
+      weight: 4
+
+      
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
