--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,7 @@ menu:
 
       
 params:
+  likerID: "tsai_jiewen"
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
   description: A website built through Hugo and blogdown.
