--- a/config.yaml
+++ b/config.yaml
@@ -46,13 +46,13 @@ params:
     - yaml
   highlightjsTheme: github
   highlightjsVersion: 9.12.0
-  # footer
-  author: JW Tsai
   logo:
     alt: Logo
     height: 50
     url: logo.png
     width: 50
+author:
+  name: JW Tsai
 markup:
   defaultMarkdownHandler: goldmark
   goldmark:
