--- a/config.yaml
+++ b/config.yaml
@@ -1,60 +1,46 @@
-baseurl: /
-languageCode: zh-tw
-title: A jwlearn blog
-theme: "hugo-lithium"
-googleAnalytics: ''
+baseurl: "/"
+languageCode: "en-us"
+title: "A jwlearn website"
+theme: "hugo-xmin"
+googleAnalytics: ""
 disqusShortname: 'https-jwlearn-netlify-app'
-enableEmoji: true
-hasCJKLanguage: true
-
 ignoreFiles:
   - \.Rmd$
   - \.Rmarkdown$
   - _cache$
   - \.knit\.md$
   - \.utf8\.md$
+footnotereturnlinkcontents: "↩"
+enableEmoji: true
+hasCJKLanguage: true
+
 permalinks:
-  post: /:year/:month/:day/:slug/
+  note: "/note/:year/:month/:day/:slug/"
+  post: "/post/:year/:month/:day/:slug/"
+
 menu:
   main:
-    - name: About
-      url: /about/
+    - name: Home
+      url: ""
       weight: 1
-#    - name: GitHub
-#      url: https://github.com/tsai-jiewen
-    - name: Series
-      url: /categories/
+    - name: About
+      url: "about/"
+      weight: 2
+    - name: Categories
+      url: "categories/"
       weight: 3
     - name: Tags
-      url: /tags/
+      url: "tags/"
       weight: 4
+    - name: Subscribe
+      url: "index.xml"
 
-      
 params:
   likerID: "tsai_jiewen"
-  copyright: "Copyright {year} JW Tsai"
-  footerCopyright: ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-  MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
-  MathJaxVersion: 2.7.5
-  description: A website built through Hugo and blogdown.
-  favicon: favicon.ico
-  highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
-  highlightjsLang:
-    - r
-    - python
-    - tex
-    - yaml
-  highlightjsTheme: github
-  highlightjsVersion: 9.12.0
-  logo:
-    alt: Logo
-    height: 50
-    url: logo.png
-    width: 50
-author:
-  name: JW Tsai
+  description: "A jwlearn blogdown."
+  footer: "&copy; [JW Tsai](/) 2020 -- 2021 | [Github](https://github.com/tsai-jiewen) "
+
 markup:
-  defaultMarkdownHandler: goldmark
   goldmark:
     renderer:
-      unsafe: yes
+      unsafe: true
