--- a/config.yaml
+++ b/config.yaml
@@ -39,6 +39,24 @@ params:
   likerID: "tsai_jiewen"
   description: "A jwlearn blogdown."
   footer: "&copy; [JW Tsai](/) 2020 -- 2021 | [Github](https://github.com/tsai-jiewen) "
+  MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
+  MathJaxVersion: 2.7.5
+  favicon: favicon.ico
+  highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
+  highlightjsLang:
+    - r
+    - python
+    - tex
+    - yaml
+  highlightjsTheme: github
+  highlightjsVersion: 9.12.0
+  logo:
+    alt: Logo
+    height: 50
+    url: logo.png
+    width: 50
+author:
+  name: JW Tsai
 
 markup:
   goldmark:
