--- a/config.yaml
+++ b/config.yaml
@@ -37,6 +37,7 @@ menu:
       url: "index.xml"
 
 params:
+  likerID: "tsai_jiewen"
   description: "A website built through Hugo and blogdown."
   footer: "&copy; [JW Tsai](/) 2020 -- 2021 | [Github](https://github.com/tsai-jiewen)"
   # options for highlight.js (version, additional languages, and theme)
