--- a/config.yaml
+++ b/config.yaml
@@ -21,18 +21,21 @@ permalinks:
 
 menu:
   main:
-    - name: Home
-      url: "/post/"
+    - name: JW-LEARN
+      url: ''
       weight: 1
+    - name: Posts
+      url: "/post/"
+      weight: 2
     - name: About
       url: "/about/"
-      weight: 2
+      weight: 3
     - name: Categories
       url: "/categories/"
-      weight: 3
+      weight: 4
     - name: Tags
       url: "/tags/"
-      weight: 4
+      weight: 5
     - name: Subscribe
       url: "index.xml"
 
