--- a/config.yaml
+++ b/config.yaml
@@ -30,14 +30,17 @@ menu:
     - name: Posts
       url: "/post/"
       weight: 3
+    - name: Notes
+      url: "/note/"
+      weight: 4
     - name: Series
       url: "/categories/"
-      weight: 4
+      weight: 5
     - name: Tags
       url: "/tags/"
-      weight: 5
-    - name: Subscribe
-      url: "index.xml"
+      weight: 6
+#    - name: Subscribe
+#      url: "index.xml"
 
 params:
   likerID: "tsai_jiewen"
