--- a/data/authors.yaml
+++ b/data/authors.yaml
@@ -1,4 +1,4 @@
 "Yihui Xie": "Yihui Xie is currently a softwaren engineer at [RStudio](https://www.rstudio.com). You can find more information about him at https://yihui.org."
 "Frida Gomam": "Frida Gomam is a joke."
 
-"JW Tsai": "**JW Tsai** is a PhD student @NCCU."
+"JW Tsai": "[**JW Tsai**](/about/) is a PhD student @NCCU."
