--- a/data/authors.yaml
+++ b/data/authors.yaml
@@ -15,3 +15,7 @@
   bio: >
     Lucius Annaeus Seneca was a Hispano-Roman Stoic philosopher, statesman, dramatist,
     and—in one work—satirist from the Silver Age of Latin literature.
+    
+- name: "JW Tsai"
+  bio: >
+    A PhD student @NCCU.
