--- a/config.yaml
+++ b/config.yaml
@@ -22,8 +22,10 @@ menu:
     - name: Search
       url: "#"
       identifier: menu-search
+      pre: "optional"
     - name: Subscribe
       url: "index.xml"
+      pre: "optional"
   footer:
     - name: Contact
       url: "/404.html"
@@ -36,10 +38,10 @@ menu:
       url: "/tags/"
       weight: 3
       pre: "optional"
-    - name: Suggest an edit
-      url: "#"
-      weight: 4
-      identifier: "menu-edit"
+#    - name: Suggest an edit
+#      url: "#"
+#      weight: 4
+#      identifier: "menu-edit"
     - name: Back to top
       url: "#"
 
