--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseurl: "/"
 languageCode: "en-us"
 defaultContentLanguage: "en"
 # defaultContentLanguage: "zh"
-title: "🅿🆂🆈🅺🅸🆃-🅻🅴🅰🆁🅽"
+title: "psykit-learn"
 theme: "hugo-prose"
 googleAnalytics: ""
 disqusShortname: "https-jwlearn-netlify-app"
