--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseurl: "/"
 languageCode: "en-us"
 defaultContentLanguage: "en"
 # defaultContentLanguage: "zh"
-title: "psykit-learn"
+title: "ℙ𝕊𝕐𝕂𝕀𝕋-𝕃𝔼𝔸ℝℕ"
 theme: "hugo-prose"
 googleAnalytics: ""
 disqusShortname: "https-jwlearn-netlify-app"
